<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>

    <string name="title_select">Select Image</string>
    <string name="title_history">History</string>
    <string name="title_news">News</string>
    <string name="news_image">News Image</string>
    <string name="description">News Description</string>

    <string name="image_classifier_failed">Image Classifier Failed</string>
</resources>