<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_marginBottom="6dp"
    app:cardCornerRadius="10dp"
    android:elevation="0dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_place_holder"
                android:contentDescription="@string/news_image" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title_news"
                android:textSize="18sp"
                android:lines="4"
                android:textStyle="bold"
                android:ellipsize="end" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:paddingHorizontal="10dp"
            android:paddingBottom="10dp"
            android:justificationMode="inter_word"
            android:ellipsize="end"
            android:text="@string/description" />
    </LinearLayout>
</androidx.cardview.widget.CardView>