<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp"
        android:contentDescription="@string/title_select"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_place_holder" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/previewImageView"
        android:background="#FFFFFF"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="2"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:id="@+id/selectButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background_color_50"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/bg_circle_picture"
                        android:contentDescription="@string/title_select"
                        android:padding="16dp"
                        android:src="@drawable/baseline_photo_library_24"
                        app:tint="#fff" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_select"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:id="@+id/analyzeButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background_color_50"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/bg_circle_analyze"
                        android:contentDescription="@string/analyze"
                        android:padding="16dp"
                        android:src="@drawable/baseline_analyze_24"
                        app:tint="#fff" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/analyze"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:id="@+id/historyAnalyze"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background_color_50"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/bg_circle_history"
                        android:contentDescription="@string/title_history"
                        android:padding="16dp"
                        android:src="@drawable/baseline_history_24"
                        app:tint="#fff" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_history"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:id="@+id/newsButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background_color_50"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/bg_circle_news"
                        android:contentDescription="@string/title_select"
                        android:padding="16dp"
                        android:src="@drawable/baseline_newspaper_24"
                        app:tint="#fff" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_news"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>